--- a/searchPage/src/main/webapp/index_new.html
+++ b/searchPage/src/main/webapp/index_new.html
@@ -67,6 +67,10 @@
         ul {
             font-size: 100%;
         }
+        .button {
+            background-color: #628fa8;
+            /*background-color: #5d8399;*/
+        }
         .children {
             font-size: 0.7rem !important;
             font-weight: 200;
