Trying to use updated css with Switches.

--- a/searchPage/src/main/webapp/index_jboss.html
+++ b/searchPage/src/main/webapp/index_jboss.html
@@ -8,7 +8,8 @@
     <title>JBoss Developer Search</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin:400">
-    <link rel="stylesheet" type="text/css" href="http://static.jboss.org/ffe/www/1.2-build-440/stylesheets/app.css">
+    <!--<link rel="stylesheet" type="text/css" href="http://static.jboss.org/ffe/www/1.2-build-440/stylesheets/app.css">-->
+    <link rel="stylesheet" type="text/css" href="http://static.jboss.org/www/pr/631/build/1197/originals/stylesheets/app.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--<script src="http://static.jboss.org/ffe/www/1.2-build-440/javascripts/foundation/foundation.js"></script>-->
     <style>
@@ -77,7 +78,7 @@
                             <small class="custom"><input type="text" autocomplete="off"></small>
                         </div>
 
-                        <div class="switch large round">
+                        <div class="switch small round">
                             <input id="z" name="switch-z" type="radio" checked>
                             <label for="z" onclick="">Off</label>
                             <input id="z1" name="switch-z" type="radio">
@@ -186,7 +187,7 @@
     <!-- Initialize Zurb and whole JBoss Developer theme -->
     <script type='text/javascript'>
         //<![CDATA[
-        $(document).foundation();
+        //$(document).foundation();
         // Toggle mobile Nav
         $('.nav-toggle').on('click',function(){
             $('body').toggleClass('nav-open');
