Switches need to use Foundation 5 notation (not Foundation 4).

--- a/searchPage/src/main/webapp/index_jboss.html
+++ b/searchPage/src/main/webapp/index_jboss.html
@@ -78,13 +78,10 @@
                             <small class="custom"><input type="text" autocomplete="off"></small>
                         </div>
 
-                        <div class="switch small round">
-                            <input id="z" name="switch-z" type="radio" checked>
-                            <label for="z" onclick="">Off</label>
-                            <input id="z1" name="switch-z" type="radio">
-                            <label for="z1" onclick="">On</label>
-                            <span></span>
-                        </div>
+                        <fieldset class="switch small round" tabindex="0">
+                            <input id="exampleCheckboxSwitch4" type="checkbox" checked>
+                            <label for="exampleCheckboxSwitch4"></label>
+                        </fieldset>
 
                         <div>
                             <h5>Technology</h5>
