Switch to recent app.css. It contains Foundation 5.

--- a/searchPage/src/main/webapp/index_jboss.html
+++ b/searchPage/src/main/webapp/index_jboss.html
@@ -8,10 +8,10 @@
     <title>JBoss Developer Search</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin:400">
-    <!--<link rel="stylesheet" type="text/css" href="http://static.jboss.org/ffe/www/1.2-build-440/stylesheets/app.css">-->
-    <link rel="stylesheet" type="text/css" href="http://static.jboss.org/www/pr/631/build/1197/originals/stylesheets/app.css">
+    <link rel="stylesheet" type="text/css" href="http://static.jboss.org/ffe/www/1.2-build-464/stylesheets/app.css">
+    <!--<link rel="stylesheet" type="text/css" href="http://static.jboss.org/www/pr/631/build/1197/originals/stylesheets/app.css">-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!--<script src="http://static.jboss.org/ffe/www/1.2-build-440/javascripts/foundation/foundation.js"></script>-->
+    <!--<script src="http://static.jboss.org/ffe/www/1.2-build-464/javascripts/foundation/foundation.js"></script>-->
     <style>
         header.main {
             border-bottom: 1px solid #d5d5d5;
@@ -196,7 +196,7 @@
         });
         //]]>
     </script>
-    <script src="http://static.jboss.org/ffe/www/1.2-build-440/javascripts/vendor/jbossorg-tabzilla.js"></script>
+    <script src="http://static.jboss.org/ffe/www/1.2-build-464/javascripts/vendor/jbossorg-tabzilla.js"></script>
 
 </body>
 </html>
